objects/Partner_Customer_Deployment_Tracking_SF__c.object
<CustomObject>
    <fields>
        <fullName>BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of BDM</description>
        <label>BDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Customer_Deployment_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Development_Stage_1_Duration__c</fullName>
        <formula>if(ISNULL(PSS_Sales_Crawl_End_Date__c), NOW() -  PSS_Sales_Crawl_Created_Date__c, PSS_Sales_Crawl_End_Date__c - PSS_Sales_Crawl_Created_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration in Days</inlineHelpText>
        <label>Customer Development Stage-1 Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Development_Stage_2_Duration__c</fullName>
        <formula>if(ISNULL(PSS_Sales_Walk_End_Date__c), NOW() -  PSS_Sales_Walk_Created_Date__c, PSS_Sales_Walk_End_Date__c - PSS_Sales_Walk_Created_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration in Days</inlineHelpText>
        <label>Customer Development Stage-2 Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Development_Stage_3_Duration__c</fullName>
        <formula>if(ISNULL(PSS_Sales_Run_End_Date__c), NOW() -  PSS_Sales_Run_Created_Date__c, PSS_Sales_Run_End_Date__c - PSS_Sales_Run_Created_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration in Days</inlineHelpText>
        <label>Customer Development Stage-3 Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Awareness_Created_Date__c</fullName>
        <label>PSS Sales Awareness Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Awareness_End_Date__c</fullName>
        <label>PSS Sales Awareness End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Crawl_Created_Date__c</fullName>
        <label>PSS Sales Crawl Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Crawl_End_Date__c</fullName>
        <label>PSS Sales Crawl End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Deployment_Created_Date__c</fullName>
        <label>PSS Sales Deployment Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Deployment_End_Date__c</fullName>
        <label>PSS Sales Deployment End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_FSR_Created_Date__c</fullName>
        <label>PSS Sales FSR Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_FSR_End_Date__c</fullName>
        <label>PSS Sales FSR End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Pilots_Created_Date__c</fullName>
        <label>PSS Sales Pilots Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Pilots_End_Date__c</fullName>
        <label>PSS Sales Pilots End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Qualification_Created_Date__c</fullName>
        <label>PSS Sales Qualification Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Qualification_End_Date__c</fullName>
        <label>PSS Sales Qualification End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Run_Created_Date__c</fullName>
        <label>PSS Sales Run Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Run_End_Date__c</fullName>
        <label>PSS Sales Run End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Smart_Created_Date__c</fullName>
        <label>PSS Sales Smart Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Smart_End_Date__c</fullName>
        <label>PSS Sales Smart End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Sprint_Created_Date__c</fullName>
        <label>PSS Sales Sprint Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Sprint_End_Date__c</fullName>
        <label>PSS Sales Sprint End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Walk_Created_Date__c</fullName>
        <label>PSS Sales Walk Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSS_Sales_Walk_End_Date__c</fullName>
        <label>PSS Sales Walk End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Country__c</fullName>
        <inlineHelpText>Country name</inlineHelpText>
        <label>Partner Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BOUVET ISLAND</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Customer_Deployment_Stage_Custom__c</fullName>
        <description>1-Crawl-1 customer deployed to.2-Walk-2-9 customers deployed to.3-Run-10-12 customers deployed to.4-Sprint-13+ customers deployed to</description>
        <inlineHelpText>Stage 1 to 4:

1 - Crawl -&gt; 1 Customer Deployed
2 - Walk	-&gt; 2-9 Customers Deployed
3 - Run -&gt; 10-12 Customers Deployed
4 - Sprint -&gt; 13+ Customers Deployed</inlineHelpText>
        <label>Partner Customer Deployment Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Crawl</fullName>
                </value>
                <value>
                    <fullName>2-Walk</fullName>
                </value>
                <value>
                    <fullName>3-Run</fullName>
                </value>
                <value>
                    <fullName>4-Sprint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <description>Name of eligible Partner that is deploying PSS</description>
        <inlineHelpText>Pull down of PSS partner</inlineHelpText>
        <label>Partner Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_PSS_Sales_Cycle_1_Duration__c</fullName>
        <formula>if(ISNULL(PSS_Sales_Qualification_End_Date__c), NOW() -  PSS_Sales_Qualification_Created_Date__c, PSS_Sales_Qualification_End_Date__c - PSS_Sales_Qualification_Created_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration in Days</inlineHelpText>
        <label>Partner PSS Sales Cycle-1 Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_PSS_Sales_Cycle_2_Duration__c</fullName>
        <formula>if(ISNULL(PSS_Sales_Awareness_End_Date__c), NOW() -  PSS_Sales_Awareness_Created_Date__c, PSS_Sales_Awareness_End_Date__c - PSS_Sales_Awareness_Created_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration in Days</inlineHelpText>
        <label>Partner PSS Sales Cycle-2 Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_PSS_Sales_Cycle_3_Duration__c</fullName>
        <formula>if(ISNULL(PSS_Sales_FSR_End_Date__c), NOW() -  PSS_Sales_FSR_Created_Date__c, PSS_Sales_FSR_End_Date__c - PSS_Sales_FSR_Created_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration in Days</inlineHelpText>
        <label>Partner PSS Sales Cycle-3 Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_PSS_Sales_Cycle__c</fullName>
        <description>Qualification-The purpose of the Qualification Stage is for Cisco to decide whether an eligible partner can successfully deliver both PSS foundation (in case converted from CBR) and smart services.2-Awareness-The purpose of this Stage is to socialize the partner with PS and smart. It is important that an executive sponsor will be identified.3-Foundation Services Readiness-This is an optional Stage for partner moving from CBR to PSS and that have concerns regarding their capability to deliver collaborative service and maximize the PSS rebates.4-Smart-Purpose of this step is to implement the collector/portal and take the outputs of the test drive and apply them to the partners "as-is" operations.5-Pilots-The purpose of this Pilot Stage is to detail the process of customer pilot described in the "Smart" Stage.6-Deployment</description>
        <inlineHelpText>Stage 1 - 6:

1 - Qualification
2 - Awareness
3 - Foundation Services Readiness
4 - Smart
5 - Pilots
6 - Deployment</inlineHelpText>
        <label>Partner PSS Sales Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Qualification</fullName>
                </value>
                <value>
                    <fullName>2-Awareness</fullName>
                </value>
                <value>
                    <fullName>3-Foundation Services Readiness</fullName>
                </value>
                <value>
                    <fullName>4-Smart</fullName>
                </value>
                <value>
                    <fullName>5-Pilots</fullName>
                </value>
                <value>
                    <fullName>6-Deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Region__c</fullName>
        <inlineHelpText>Region name
US, Canada and LATAM
Asia Pacific, Japan and China
Europe, Middle East, Africa, Russia</inlineHelpText>
        <label>Partner Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APJC</fullName>
                </value>
                <value>
                    <fullName>EMEAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Tech_Integration_Deployment__c</fullName>
        <label>Partner Tech Integration/Deployment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Energywise</fullName>
                </value>
                <value>
                    <fullName>IPV6</fullName>
                </value>
                <value>
                    <fullName>ServiceGrid</fullName>
                </value>
                <value>
                    <fullName>Smart Bonding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>To analyze Partner data</description>
    <label>Partner Customer Deployment Tracking</label>
    <nameField>
        <displayFormat>PCDT-{0}</displayFormat>
        <label>Partner Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Customer Deployment Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>